--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 body {
+	background-color: #000;
+	color: #fff;
 	font-family: sans-serif;
+}
+
+a {
+	display: block;
+	color: inherit;
+	text-decoration: none;
 }
